--- a/src/client/package.json
+++ b/src/client/package.json
@@ -18,6 +18,7 @@
     "connect-redis": "^5.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "introjs": "^0.2.2",
     "nuxt": "^2.15.3",
     "redis": "^3.1.2",
     "vuesax": "^4.0.1-alpha.25"
