--- a/compose/nginx/Dockerfile
+++ b/compose/nginx/Dockerfile
@@ -1,5 +1,5 @@
 FROM nginx:alpine
 
 RUN rm /etc/nginx/conf.d/default.conf
-COPY ./compose/production/nginx/nginx.conf /etc/nginx/conf.d
-# COPY ./compose/production/nginx/ssl /etc/ssl
+COPY ./compose/nginx/nginx.conf /etc/nginx/conf.d
+# COPY ./compose/nginx/ssl /etc/ssl
