--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,8 +59,7 @@ services:
     depends_on:
       - django
       - nuxt
-
-  redis:
-    image: redis
-    ports:
-      - 6379:6379
+#   redis:
+#     image: redis
+#     ports:
+#       - 6379:6379
