--- a/compose/nginx/nginx.conf
+++ b/compose/nginx/nginx.conf
@@ -6,7 +6,7 @@ upstream frontend {
 }
 
 server {
-    listen 8000 http2;
+    listen 8000;
 
 
     charset utf-8;
@@ -24,7 +24,7 @@ server {
     location / {
       client_max_body_size 100M;
       proxy_redirect off;
-      proxy_pass https://backend;
+      proxy_pass http://django:8001;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $http_host;
       proxy_set_header   X-Real-IP   $remote_addr;
@@ -33,7 +33,7 @@ server {
 }
 
 server {
-    listen 80 http2;
+    listen 80;
 
 
     charset utf-8;
@@ -51,7 +51,7 @@ server {
     location / {
 
       proxy_redirect off;
-      proxy_pass https://frontend;
+      proxy_pass http://nuxt:3000;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $http_host;
       proxy_set_header   X-Real-IP   $remote_addr;
