--- a/src/client/package.json
+++ b/src/client/package.json
@@ -12,6 +12,8 @@
     "lint": "yarn lint:js"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^28.0.0",
+    "@ckeditor/ckeditor5-vue2": "^1.0.5",
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/pwa": "^3.3.5",
     "boxicons": "^2.0.7",
