--- a/src/client/package.json
+++ b/src/client/package.json
@@ -23,6 +23,7 @@
     "intro.js": "2.9.3",
     "nuxt": "^2.15.3",
     "redis": "^3.1.2",
+    "vue-star-rating": "^1.7.0",
     "vue-tour": "^2.0.0",
     "vuesax": "^4.0.1-alpha.25"
   },
