--- a/compose/nginx/nginx.conf
+++ b/compose/nginx/nginx.conf
@@ -24,7 +24,7 @@ server {
     location / {
       client_max_body_size 100M;
       proxy_redirect off;
-      proxy_pass http://django:8001;
+      proxy_pass http://backend;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $http_host;
       proxy_set_header   X-Real-IP   $remote_addr;
@@ -51,7 +51,7 @@ server {
     location / {
 
       proxy_redirect off;
-      proxy_pass http://nuxt:3000;
+      proxy_pass http://frontend;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $http_host;
       proxy_set_header   X-Real-IP   $remote_addr;
