--- a/src/client/package.json
+++ b/src/client/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "intro.js": "2.9.3",
+    "lottie-vuejs": "^0.4.0",
     "nuxt": "^2.15.3",
     "redis": "^3.1.2",
     "vue-star-rating": "^1.7.0",
