--- a/src/client/package.json
+++ b/src/client/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^28.0.0",
+    "@ckeditor/ckeditor5-theme-lark": "^29.0.0",
     "@ckeditor/ckeditor5-vue2": "^1.0.5",
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/pwa": "^3.3.5",
@@ -24,6 +25,7 @@
     "lottie-vuejs": "^0.4.0",
     "nuxt": "^2.15.3",
     "redis": "^3.1.2",
+    "vue-froala-wysiwyg": "^4.0.3",
     "vue-star-rating": "^1.7.0",
     "vue-tour": "^2.0.0",
     "vuesax": "^4.0.1-alpha.25"
