--- a/src/client/package.json
+++ b/src/client/package.json
@@ -17,6 +17,8 @@
     "@ckeditor/ckeditor5-vue2": "^1.0.5",
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/pwa": "^3.3.5",
+    "@tiptap/starter-kit": "^2.0.0-beta.82",
+    "@tiptap/vue-2": "^2.0.0-beta.39",
     "boxicons": "^2.0.7",
     "connect-redis": "^5.2.0",
     "express": "^4.17.1",
