--- a/src/client/package.json
+++ b/src/client/package.json
@@ -26,6 +26,7 @@
     "intro.js": "2.9.3",
     "lottie-vuejs": "^0.4.0",
     "nuxt": "^2.15.3",
+    "party-js": "^2.0.1",
     "redis": "^3.1.2",
     "vue-froala-wysiwyg": "^4.0.3",
     "vue-star-rating": "^1.7.0",
